--- a/CSS/ProjectFilter.css
+++ b/CSS/ProjectFilter.css
@@ -3,20 +3,16 @@
 /* Button formatting taken care of by w3.css */
 /* Button highlighting functionality added for ISotope filtering */
 
-.button.is-checked {
+.w3-btn.is-checked {
   color: #000;
   background: #fff;
 }
 
-.button:active {
+.w3-btn:active {
   box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
 }
 
 /* ---- isotope ---- */
-
-.grid {
-  border: 1px solid #333;
-}
 
 /* clear fix */
 .grid:after {
