--- a/CSS/ProjectFilter.css
+++ b/CSS/ProjectFilter.css
@@ -10,7 +10,7 @@
 
 .w3-btn:active {
   box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
-  color:red;
+  background:red;
 }
 
 /* ---- isotope ---- */
