--- a/CSS/ProjectFilter.css
+++ b/CSS/ProjectFilter.css
@@ -1,11 +1,11 @@
 /* Filtering functionality via Isotope */
 
 /* Button formatting taken care of by w3.css */
-/* Button highlighting functionality added for ISotope filtering */
+/* Button highlighting functionality added for Isotope filtering */
 
 .w3-btn.is-checked {
-  color: #fff;
-  background: #000;
+  color: #fff!important;
+  background: #000!important;
 }
 
 /* ---- isotope ---- */
