--- a/CSS/ProjectFilter.css
+++ b/CSS/ProjectFilter.css
@@ -7,3 +7,21 @@
   color: #fff;
   background: #000;
 }
+
+/* ---- isotope ---- */
+
+/* clear fix */
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+/* ---- .element-item ---- */
+
+.element-item {
+  position: relative;
+  float: left;
+}
+
+
